DB to track how many times a fingerprint has been seen in the wild

--- a/data/panel/panel.html
+++ b/data/panel/panel.html
@@ -1,1 +1,2 @@
-Root CA: <span id="certOrg">Cool</span>
+<h3> Root CA: <span id="name"></span></h3>
+<h4> Times seen: <span id="times_seen"></span> </h4>
