show stats page

--- a/data/panel/panel.html
+++ b/data/panel/panel.html
@@ -1,2 +1,3 @@
 <h3> Root CA: <span id="name"></span></h3>
 <h4> Times seen: <span id="times_seen"></span> </h4>
+<a id="openStatsLink" href="#">Open Stats Page</a>
