option to alert all or never for CA

--- a/data/stats/stats.html
+++ b/data/stats/stats.html
@@ -5,9 +5,10 @@
     <title>CAre Statistics</title>
 </head>
 <body>
-<table>
+<table style="border: 1px;">
     <thead>
     <tr>
+        <th></th>
         <th>Name</th>
         <th>Fingerprint</th>
         <th>Times Seen</th>
@@ -17,5 +18,15 @@
 
     </tbody>
 </table>
+<style>
+    table {
+        border-collapse: collapse;
+        width:75%;
+    }
+
+    table, th, td {
+        border: 1px solid black;
+    }
+</style>
 </body>
 </html>
